funciones de crear li y a

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Cine</title>
 </head>
 <body>
-    <div id="id-main">
-        <ul id="id-ul">
+    <div id="div-main">
 
-        </ul>
     </div>
+    <script src="index.mjs"></script>
 </body>
 </html>
