--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Cine</title>
 </head>
 <body>
-    <div id="div-main">
-
-    </div>
-    <script src="index.mjs"></script>
+    <section class="container">
+        <div id="div-main">
+    
+        </div>
+    </section>
+    <script type="module" src="index.mjs"></script>
 </body>
 </html>
