Agregamos un poco de css y cambiamos el div por un nav

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
     <section class="container">
-        <div id="div-main">
+        <nav id="nav-main">
 
-        </div>
+        </nav>
     </section>
+    <section></section>
     <script type="module" src="index.mjs"></script>
 </body>
 
