cosas que no andan, pero codigo del carrusel

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
         </nav>
     </section>
-    <section></section>
+    <section id="sec-inicio"></section>
+    <section id="sec-cartelera"></section>
+    <section id="sec-combos"></section>
     <script type="module" src="index.mjs"></script>
 </body>
 
