--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
     <section id="sec-inicio"></section>
     <section id="sec-cartelera"></section>
-    <section id="sec-combos"></section>
+    <section id="sec-combo"></section>
     <script type="module" src="index.mjs"></script>
 </body>
 
