ultimo carrusel arreglado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container" id="containerMain">
         <nav id="nav-main">
 
         </nav>
