--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
         </nav>
     </section>
+    <section id="sec-carrusel">
+
+    </section>
     <script type="module" src="index.mjs"></script>
 </body>
 
